# workshop

./: .dockerignore  .env  .gitignore  .gitmodules  Endpoints.ini  README.md  SmartClient.ini  client.py  clientClass.py  compose.yaml  configMaker.py  endpoint.py  fhirtype.py  logging.ini  logging_fhir.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_requirements.md  run_requirements.txt  standardize.py  thankyou.sh
.github/: pull_request_template.md
.github/workflows/: fhirtype_dev_pr.yml  fhirtype_prod_pr.yml  python-app.yml
.run/: lint current with black.run.xml  profile-flask-api.run.xml  ssh-fhirtype-osu-cs.sh.run.xml  ssh-fhirtype-vm.sh.run.xml  swaggerUI.run.xml
FhirCapstoneProject/: Dockerfile  README.md  configMaker.py  wsgi.py
FhirCapstoneProject/fhirtypepkg/: accuracy.py  (+13 more)
FrontEnd/: Dockerfile  index.css  index.html  package-lock.json  package.json  pages-vite.config.ts  pnpm-lock.yaml  tailwind.config.js
ReverseProxy/: Dockerfile  default.conf  start.sh
docs/: Dockerfile  Doxyfile  DoxygenMainFile.md  prod.Doxyfile  py_filter  start.sh
logs/: logging_fhir.py
model/: analysis.py
nginx/: Dockerfile  default.conf
persistent/: DDL.sql  README.md  main.py  query.py  queryhelper.py  queryset.py  tutorial.py
profile/: GET.api.getdata.30420ms.1711140509.prof
requirements/: common.txt  dev.txt
scripts/: docker_up.sh  ssh-fhirtype-osu-cs.sh  updateHosts.ps1  update_hosts.sh
src/: _configMaker.py  client.py  configMaker.py  main.py
tests/: test_basic.py  test_specific_endpoint_kaiser.py  test_validating_api_input.py
(+100 files in other folders)
